<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"

    app:cardBackgroundColor="@color/Gunmetal"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/apply_filters"
            android:textColor="@color/seashell"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup

            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/txtTitle"
            app:layout_constraintStart_toStartOf="@+id/txtTitle"
            app:layout_constraintTop_toBottomOf="@id/txtTitle">

            <RadioButton
                android:id="@+id/radioAllNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_note"
                android:buttonTint="@color/seashell"
                android:textColor="@color/seashell" />

            <RadioButton
                android:id="@+id/radioTextAlphabetically"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alphabetically"
                android:buttonTint="@color/seashell"
                android:textColor="@color/seashell" />

            <RadioButton
                android:id="@+id/radioDateDesc"
                android:buttonTint="@color/seashell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_descending"
                android:textColor="@color/seashell" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>