<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/noteRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:layoutAnimation="@anim/item_layout_animation"
            android:padding="10dp"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.core.widget.NestedScrollView>


    <ImageView
        android:id="@+id/emptyNote"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/empty_note_content_desc"
        android:src="@drawable/add_note"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/emptyNote"
        android:textColor="@color/Gunmetal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/emptyNote"
        app:layout_constraintStart_toStartOf="@+id/emptyNote"
        app:layout_constraintTop_toBottomOf="@+id/emptyNote" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGoToAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/caribbeanGreen"
        android:contentDescription="@string/add_note_content_desc"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/fab_square"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>


