<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/backRed"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle"

            android:backgroundTint="@color/awesome"
            android:clickable="true"

            android:focusable="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backGreen" />

        <View
            android:id="@+id/backYellow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/ripeMango"
            android:clickable="true"

            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/backBlue"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/backRed" />

        <View
            android:id="@+id/backBlue"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/moonstone"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/backGreen"
            app:layout_constraintTop_toTopOf="@+id/backRed" />

        <View
            android:id="@+id/backGreen"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"

            android:background="@drawable/circle"
            android:backgroundTint="@color/caribbeanGreen"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/backRed"

            app:layout_constraintTop_toTopOf="@id/backRed"
            tools:layout_editor_absoluteY="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/title"
        android:maxLines="3"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/edtDesc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/description"
        android:paddingStart="8dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/caribbeanGreen"
        android:text="@string/done"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>